--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -13,6 +13,8 @@
  <%- include('partials/_header') %>
   <main style="margin: 1em;">
     <h3>My URLs</h3>
+   
+      
     <table class="table">
       <thead>
         <tr>
@@ -23,12 +25,17 @@
       <tbody>
         <% for(let url in urls) { %>
           <tr>
+            <form method="POST" action="/urls/<%=url%>/delete">
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td><button>Delete</button></td>
+          </form>
+            
           </tr>
         <% } %>
       </tbody>
     </table>
+    
   </main>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
