--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,10 +8,17 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="/urls">My URLs</a>
           <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-          <form method = "POST" action = "/login">
-              <input type = "text" name = "username">
-              <button>Sign In</button>
-          </form>
+          
+          <form method = "POST" action ="/logout">
+          <% if(username){%>
+            
+              <p>Logged in as <%= username %></p>
+              <button>Sign Out</button>
+            
+          <%} else {%>
+            <a href = "/login">login</a>
+          <% } %>
+        </form>
         </div>
       </div>
     </nav>
