Updated the register route

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,9 +10,9 @@
           <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
           
           <form method = "POST" action ="/logout">
-          <% if(username){%>
+          <% if(id){%>
             
-              <p>Logged in as <%= username %></p>
+              <p>Logged in as <%= email %></p>
               <button>Sign Out</button>
             
           <%} else {%>
