--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -12,7 +12,8 @@
 
  <%- include('partials/_header') %>
  <form method = "POST" action = "/login">
-    <input type = "text" name = "username">
+    <input type = "text" name = "email">
+    <input type = "password" name = "password">
     <button>Sign In</button> 
   </form>
   <!-- Bootstrap JS -->
