--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -11,9 +11,14 @@
 <body>
 
  <%- include('partials/_header') %>
+ <h1>Login</h1>
  <form method = "POST" action = "/login">
+  <label for="email">Email Address</label>
     <input type = "text" name = "email">
+    <br>
+    <label for="password">Password</label>
     <input type = "password" name = "password">
+    <br>
     <button>Sign In</button> 
   </form>
   <!-- Bootstrap JS -->
