--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -11,9 +11,11 @@
 <body>
 
  <%- include('partials/_header') %>
+ <h1>Register</h1>
  <form method = "POST" action = "/register">
     <label for="email">Email:</label>
     <input type = "email" name = "email">
+    <br>
     <label for="password">Password:</label>
     <input type = "password" name = "password">
 
