Did some more formatting

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -27,7 +27,7 @@
           <tr>
             <form method="POST" action="/urls/<%=url%>/delete">
             <td><%= url %></td>
-            <td><%= urls[url].longURL %></td>
+            <td><%= urls[url].longURLÏ %></td>
             <td><a href="/urls/<%=url%>"><button type = "button">Edit</button></a></td>
             <td><button type = "submit">Delete</button></td>
           </form>
