--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -19,7 +19,7 @@
      
     <div class="card-footer text-muted">
       <form method = "POST">
-        <h2>Edit</h2>
+        <h2>Edit</h2>ƒ
        New URL: <input type = "text" name = "newURL"><button>Submit</button>
       </form>
     </div>
