--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,25 +1,26 @@
 <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-success">
-      <a class="navbar-brand" href="/urls">TinyApp</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/urls">My URLs</a>
-          <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-          
-          <form method = "POST" action ="/logout">
+  <nav class="navbar navbar-expand-md navbar-dark bg-success">
+    <a class="navbar-brand" href="/urls">TinyApp</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" href="/urls">My URLs</a>
+        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+
+        <form method="POST" action="/logout">
           <% if(id){%>
-            
-              <p>Logged in as <%= email %></p>
-              <button>Sign Out</button>
-            
+
+          <p>Logged in as <%= email %></p>
+          <button>Sign Out</button>
+
           <%} else {%>
-            <a href = "/login">login</a>
+          <a href="/login">login</a>
           <% } %>
         </form>
-        </div>
       </div>
-    </nav>
-  </header>
+    </div>
+  </nav>
+</header>
