--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,6 +18,7 @@
 
           <%} else {%>
           <a href="/login">login</a>
+          <a href ="/register">register</a>
           <% } %>
         </form>
       </div>
